G1: More useful information in a few assert messages

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b08

        In VerifyRegionListsClosure::doHeapRegion() the assert messages print the region_num() value of the heap region. This value is the the number of regions that a humongous object covers. It is only relevant for starts humongous regions. For all other regions this value is 1.

        Most likely the intended value was hrs_index(), which is a sequential number enumerating all heap regions.

              Assignee:
              Bengt Rutisson (Inactive)
              Reporter:
              Bengt Rutisson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: