8038829: G1: More useful information in a few assert messages

Reviewed-by: sjohanss, jmasa